--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -32,7 +32,11 @@ $paletteWidth: 10vw;
 // SIZES
 $footer-link-text-size: 2rem;
 $footer-text-size: 1.2rem;
+//TODO check
 $borderRadius: 2.5vw;
+
+//COMMON BORDER RADIUS
+$border-radius: 25px;
 
 /* FONTS */
 @font-face {
