--- a/angular-front/src/app/register/components/register/register.component.scss
+++ b/angular-front/src/app/register/components/register/register.component.scss
@@ -1,3 +1,107 @@
-form {
-  margin-top: 50px;
+@import "variables.scss";
+@import "../../../node_modules/rfs/scss";
+
+.form-container {
+  width: 80%;
+  background-color: $grey-color;
+  border-radius: $border-radius;
+
+
+  .form-presentation {
+    h1 {
+      color: $primary-gold-color;
+    }
+  }
+
+  .form-group {
+    .guest-info {
+      margin-bottom: 20px;
+    }
+
+    .guest-detail {
+      margin-bottom: 20px;
+    }
+  }
+
+  .form-detail {
+    .guest-person {
+      padding-left: 15px;
+      padding-right: 15px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .guest-child {
+      padding-left: 15px;
+      padding-right: 15px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .guest-dietary-detail {
+      padding-left: 15px;
+      padding-right: 15px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .input-button {
+      background-color: $grey-color;
+      border: 0;
+
+      .las {
+        border-radius: 8rem;
+        box-shadow: inset 0 0 0 4px $grey-color;
+        background-color: $white-color;
+        font-size: 2.2rem;
+        color: $primary-gold-color;
+      }
+    }
+
+    .badge-song {
+      display: inline-block;
+      border-radius: $border-radius;
+      min-width: 2rem;
+      width: auto;
+      margin-top: 6px;
+      margin-bottom: 6px;
+      margin-left: 5px;
+      padding: 6px;
+      background-color: $primary-gold-color;
+      color: $dark-color;
+
+      .las {
+        padding-top: 2px;
+        padding-right: 5px;
+        font-size: 1.8rem;
+      }
+
+      .las:hover {
+        color: $white-color;
+      }
+
+      .blank-button {
+        background-color: $primary-gold-color;
+        border: none;
+      }
+
+      span {
+        font-size: 1rem;
+      }
+    }
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+
+  .guest-name,
+  .guest-phone {
+    padding-right: 12px !important;
+  }
+
+  .guest-surname,
+  .guest-email {
+    padding-left: 12px !important;
+  }
 }
